--- a/composer.json
+++ b/composer.json
@@ -49,6 +49,7 @@
         "doctrine/doctrine-fixtures-bundle": "^3.4",
         "liip/test-fixtures-bundle": "^2.4",
         "phpunit/phpunit": "^9.5",
+        "sempro/phpunit-pretty-print": "^1.4",
         "symfony/browser-kit": "5.4.*",
         "symfony/css-selector": "5.4.*",
         "symfony/debug-bundle": "5.4.*",
