--- a/.env.test
+++ b/.env.test
@@ -4,4 +4,6 @@ APP_SECRET='$ecretf0rt3st'
 SYMFONY_DEPRECATIONS_HELPER=999999
 PANTHER_APP_ENV=panther
 PANTHER_ERROR_SCREENSHOT_DIR=./var/error-screenshots
-DATABASE_URL="mysql://root@127.0.0.1:3306/testing_sf_test?serverVersion=5.7&charset=utf8mb4"
+# DATABASE_URL="mysql://root@127.0.0.1:3306/testing_sf_test?serverVersion=5.7&charset=utf8mb4"
+# DATABASE_URL="sqlite:///%kernel.cache_dir%/test.db"
+DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
