--- a/.github/workflows/github-actions-phpunit-sf.yml
+++ b/.github/workflows/github-actions-phpunit-sf.yml
@@ -20,6 +20,17 @@ jobs:
       - name: Installer les dependances
         run: composer install --prefer-dist --no-progress --no-suggest
 
+      # step 2 : installer les dependances
+      - name: Installer les dependances
+        uses: nanasess/setup-chromedriver@v1
+          with:
+            # Optional: do not specify to match Chrome's version
+            chromedriver-version: '88.0.4324.96'
+        run: |
+            export DISPLAY=:99
+            chromedriver --url-base=/wd/hub &
+            sudo Xvfb -ac :99 -screen 0 1280x1024x24 > /dev/null 2>&1 &
+
       # step 3 : Lancer le php unit
       - name: PHPUnit
         uses: chindit/actions-phpunit-symfony@master
