--- a/.github/workflows/github-actions-phpunit-sf.yml
+++ b/.github/workflows/github-actions-phpunit-sf.yml
@@ -23,6 +23,9 @@ jobs:
       # step 2 : installer les dependances
       - name: Installer les dependances
         uses: nanasess/setup-chromedriver@v1
+
+      # step 2 : installer les dependances
+      - name: Installer les dependances
         run: |
             export DISPLAY=:99
             chromedriver --url-base=/wd/hub &
