--- a/.github/workflows/github-actions-symfony5-tests.yml
+++ b/.github/workflows/github-actions-symfony5-tests.yml
@@ -23,14 +23,14 @@ jobs:
     steps:
       # step 1 : checkout vers ma branche https://github.com/actions/checkout (official)
       - name: Checkout vers ma branche actuelle
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       # https://github.com/shivammathur/setup-php (community)
-      - name: Setup PHP, extensions and composer with shivammathur/setup-php
-        uses: shivammathur/setup-php@verbose
-        with:
-          php-version: ${{ matrix.php-versions }}
-          extensions: mbstring, xml, ctype, iconv, intl, pdo_sqlite, dom, filter, gd, iconv, json, mbstring, pdo
+      # - name: Setup PHP, extensions and composer with shivammathur/setup-php
+      #   uses: shivammathur/setup-php@verbose
+      #   with:
+      #     php-version: ${{ matrix.php-versions }}
+      #     extensions: mbstring, xml, ctype, iconv, intl, pdo_sqlite, dom, filter, gd, iconv, json, mbstring, pdo
 
       # Composer
       - name: Get composer cache directory
@@ -39,7 +39,7 @@ jobs:
 
         # https://help.github.com/en/actions/configuring-and-managing-workflows/caching-dependencies-to-speed-up-workflows
       - name: Cache composer dependencies
-        uses: actions/cache@v1
+        uses: actions/cache@v3
         with:
           path: ${{ steps.composer-cache.outputs.dir }}
           key: ${{ runner.os }}-composer-${{ hashFiles('**/composer.lock') }}
@@ -95,6 +95,13 @@ jobs:
         run: |
           php bin/console -V
           php bin/console about
+
+      # BD
+      - name: Create BD & table
+        run: |
+          php bin/console d:d:c --env=test
+          php bin/console d:s:u --force --env=test
+
       # Tests
       - name: Run unit and functional tests
         run: |
