--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -1,17 +1,44 @@
-name: GitHub Actions Demo # Nom du workflow
-on: [push]  # évenement(s)
-jobs: # groups des traveaux à executer dans le workflow
-  Explore-GitHub-Actions: # Nom du travail à faire
-    runs-on: ubuntu-latest  # Runner : un serveur qui execute vos workflows (ubuntu/windows/macos)
-    steps:  # Grouge des etapes à executer
-      - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."  # execute commande shell (echo)
-      - run: echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"  # execute commande shell (echo)
-      - run: echo "🔎 The name of your branch is ${{ github.ref }} and your repository is ${{ github.repository }}." # execute commande shell (echo)
+# Nom du WorkFlow
+name: GitHub Actions Demo
+
+# Handler Evenement(s)
+on: [push]
+
+# Groups des traveaux
+jobs:
+
+  # Nom du traivail
+  Explore-GitHub-Actions:
+
+    # Runner : un serveur qui execute vos workflows (ubuntu/windows/macos)
+    runs-on: ubuntu-latest
+
+    # Grouge des etapes à executer
+    steps:
+
+      # Step1: afficher : 🎉 The job was automatically triggered by a push event.
+      - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
+
+      # Step2 afficher : 🐧 This job is now running on a Linux server hosted by GitHub!
+      - run: echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
+
+      # Step3 : afficher : 🔎 The name of your branch is refs/heads/master and your repository is Arian-Taylor/FormationTestSf.
+      - run: echo "🔎 The name of your branch is ${{ github.ref }} and your repository is ${{ github.repository }}."
+
+      # Step4 : Checkout vers la branche actuelle
       - name: Check out repository code   # nom de l'étape
         uses: actions/checkout@v3   # execute une action (checkout)
-      - run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."  # execute commande shell (echo)
-      - run: echo "🖥️ The workflow is now ready to test your code on the runner." # execute commande shell (echo)
+
+      # Step5 : afficher : 💡 The Arian-Taylor/FormationTestSf repository has been cloned to the runner.
+      - run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
+
+      # Step6 : afficher : 🖥️ The workflow is now ready to test your code on the runner
+      - run: echo "🖥️ The workflow is now ready to test your code on the runner."
+
+      # Step7
       - name: List files in the repository  # nom de l'étape
         run: |  # execute plusieurs commandes (ls, ...)
           ls ${{ github.workspace }}
+
+      # Step8 : afficher : 🍏 This job's status is success.
       - run: echo "🍏 This job's status is ${{ job.status }}." # execute commande shell (echo)
